# smb3-prime-discord-bot

./: ChannelAdapter.py  Field.py  Language.py  Option.py  Response.py  channel_manager.py  core.py  database.py  emojis.py  info.py  keep_alive.py  main.py  prefix.py  pyproject.toml  translate.py
.githuib/: FUNDING.yml
FieldCreator/: ChannelField.py  ChannelGroupField.py  Field.py
Message/: Message.py  MessageCreator.py
Message/Attachments/: Attachment.py  NoneAttachment.py
Message/Embeds/: Author.py  AuthorColourEmbed.py  AuthorEmbed.py  BaseEmbed.py  BaseLanguageEmbed.py  Embed.py  Footer.py  FromMessageEmbed.py  ImageEmbed.py  ImageTextEmbed.py  LanguageEmbed.py  NoneEmbed.py  NowEmbed.py  TextEmbed.py  ThumbnailEmbed.py  ThumbnailTextEmbed.py
Permissions/: Hole.py  Permission.py  PermissionID.py  TokenInvalidatedException.py  __init__.py
Security/: SecureMemberAdapter.py  Token.py  __init__.py
Security/MemberAdapter/: MemberAdapter.py  MemberChannelAdapter.py  MemberGuildAdapter.py
Security/Permission/: AccessDeniedException.py  DiscordPermissions.py  Hole.py  Permission.py  PermissionHandler.py  PermissionID.py  __init__.py  has_permission.py
Security/TokenStrategy/: BasicTokenStrategy.py  ForbiddenTokenException.py  InvalidTokenException.py  MismatchPermissionException.py  NonMemberTokenException.py  TokenStrategy.py  (+1 more)
cogs/: __init__.py  channel_manager.py  core.py  info.py  log.py  options.py  security.py  sender.py  translate.py
converters/: ChannelConverter.py  ChannelGroupConverter.py  LanguageConverter.py  PermissionConverter.py  convert.py
(+7 files in other folders)
