[tool.poetry]
name = "repl_python3_Prime-Bot"
version = "0.1.0"
description = ""
authors = ["TheJoeSmo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
googletrans = "^3.0.0"
Flask = "^2.0.1"
replit = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
